--- a/Trunk/www/communication/ihm.css
+++ b/Trunk/www/communication/ihm.css
@@ -23,7 +23,7 @@ table, tr, th, td
 #CreateUserCommand
 {
 	margin-left: 10%;
-	margin-top: 0%;
+	/*margin-top: 0%;*/
 	display: inline-block;
 	width : 450px;
 	float: left;
@@ -44,7 +44,7 @@ table, tr, th, td
 	height: 380px;
 	margin-left: 5%;
 	margin-top: -120px;
-	margin-bottom: 30px;
+	/*margin-bottom: 10px;*/
 	display: inline-block;
 	float: left;
 }
